# class_demo

./: .cproject  .gitignore  .mxproject  STM32_TMC5130.launch  readme.md
App/: app_main.c
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: gpio.c  main.c  spi.c  usart.c
Debug/: STM32_TMC5130.elf  STM32_TMC5130.list  STM32_TMC5130.map  makefile  objects.list  sources.mk
Debug/App/: app_main.d  app_main.su  subdir.mk
Debug/Core/Src/: delay_us.d  delay_us.su  main.d  main.su  spi.su  subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_dma.su  stm32f4xx_hal_flash.su  stm32f4xx_hal_flash_ex.su  stm32f4xx_hal_gpio.su  stm32f4xx_hal_spi.su  stm32f4xx_hal_uart.su  subdir.mk
Debug/TMC5130/: subdir.mk  tmc5160.d  tmc5160.su  tmc5160_io.d  tmc5160_io.su
Debug/Trinamic/tmc/helpers/: CRC.d  Functions.d  Functions.su  subdir.mk
TMC5130/: app_function.c  app_function.h  tmc5160.c  tmc5160.h  tmc5160_io.c  tmc5160_io.h
main/: CMakeLists.txt  main.c
