
idf_component_register(SRC_DIRS "." "../components/vl53l1x/core/src" "../components/vl53l1x/platform/src"
                    INCLUDE_DIRS "." "../components/vl53l1x/core/inc" "../components/vl53l1x/platform/inc" )

#                     # "STM/Drivers/BSP/Components/vl53l1x"
#                     # "STM/Drivers/BSP/Components/vl53l1x" "STM/Drivers/BSP/X-NUCLEO-53L1A1" "STM/Projects/STM32L476RG-Nucleo/Examples/53L1A1/SimpleRanging/Inc"
